# mim-tts

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: azure-signing-metadata.json  sign-windows.ps1
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  db.rs  fn_hotkey.rs  lib.rs  main.rs  models.rs  paste.rs  permissions.rs  permissions_bridge.m  settings.rs  state.rs  system_audio.rs  transcribe.rs
